2013-07-31  Norbert Preining  <preining@logic.at>

	* updmap-sys.sh: call updmap --sys  instead of epanding vars

2013-04-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Simplify '$(srcdir)/..'=> '$(top_srcdir)'.

2013-04-14  Karl Berry  <karl@tug.org>

	* updmap.pl: wording, sync from Master.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am ({texconfig,web2c}dir): Change texmf => texmf-dist.

2013-01-26  Karl Berry  <karl@tug.org>

	* Makefile.am (echo-shell-scripts): new target, for
	check-wrapper-consistency.

2013-01-15  Karl Berry  <karl@tug.org>

	* fmtutil.sh (run_initex): save log file first,
	even if the .fmt isn't built.  Tweak message wordings.
	Report from tljack, 12 Jan 2013 14:35:16.

2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fmtutil*, tcfmgr*, texconfig*, texlinks*  (removed):
	Moved from here to ../texlive/tetex/.
	* Makefile.am: Adapted; run-texlinks rule

2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/, all*, dvi2fax*, dvired*, fontinst*, kpsetool*,
	kpsewhere*, ps2frag*, pslatex*, rubibtex*, rumakeindex*,
	updmap* (removed): Moved from here to ../texlive/tetex/.
	* Makefile.am: Adapted.

2012-08-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* e2pall.man, texdoctk.man, texdoctk.man (removed): Moved from
	here to ../texlive/tetex/.
	* Makefile.am: Adapted.

2012-08-04  Karl Berry  <karl@tug.org>

	* tl-sys-wrapper: not needed.  The Windows wrapper, runscript.tlu,
	already handles -sys, as does the Windows fmtutil.c.
	* Makefile.am (EXTRA_DIST): remove it again.

2012-08-03  Karl Berry  <karl@tug.org>

	* tl-sys-wrapper.pl: initial attempt.

2012-07-31  Norbert Preining  <preining@logic.at>

	* updmap.pl (main): fix quoting and var expansion on Windows.
	* updmap.pl (main): and another fix, this time for PATH separator

2012-07-30  Norbert Preining  <preining@logic.at>

	* updmap.pl (main): support for multiple entry TEXMFLOCAL.
	Tell the user which config files is used for writing.
